# waker

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  RELEASING.md  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.base.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  version-policy.yml
rust/sdk-wasm/: Cargo.toml  README.md
rust/sdk-wasm/src/: lib.rs  trainer.rs
rust/sdk-wasm/src/audio/: mod.rs  mulaw.rs  resample.rs  ring_buffer.rs
rust/sdk-wasm/src/backbone/: forward.rs  mod.rs  weights.rs
rust/sdk-wasm/src/config/: mod.rs
rust/sdk-wasm/src/detector/: decision.rs  head.rs  mod.rs  projection.rs  temperature.rs
rust/sdk-wasm/src/frontend/: fft.rs  log_mel.rs  mel.rs  mod.rs
rust/vad-wasm/: Cargo.toml  README.md
rust/vad-wasm/model/: silero_vad_16k_manifest.json
rust/vad-wasm/src/: lib.rs  model.rs  nn.rs  weights.rs
scripts/: check-pr-package-versions.ts  npm-auth.sh  npm-auth.ts  publish-package.ts  sync-rust-source.ts  version-packages.ts
