[package]
name = "waker-wasm"
version = "0.1.0"
edition = "2021"
description = "Rust-to-WebAssembly wake-word detector runtime for Waker"
license = "MIT"
repository = "https://github.com/workspaces-team/waker"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
realfft = "3"
rustfft = "6"
libm = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# The bundled wasm-opt does not yet support bulk-memory ops emitted by Rust.
# Rust's own LTO + opt-level=z provide equivalent size optimization.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
