[package]
name = "vad-wasm"
version = "0.1.0"
edition = "2021"
description = "Silero VAD v5 compiled to WebAssembly — bespoke forward pass, no ONNX Runtime"
license = "MIT"
repository = "https://github.com/workspaces-team/waker"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
# The bundled wasm-opt does not yet support the bulk-memory ops emitted by Rust here.
# Rust's own LTO + opt-level=z still give the compact release binary we want.
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
